# Analysez-des-donn-es-de-syst-mes-ducatifs

./: .gitignore  Analysez des données de systèmes éducatifs.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: Analysez des données de systèmes éducatifs-checkpoint.ipynb
