[project]
name = "analyse-les-donnee-de-systeme"
version = "0.1.0"
description = "Analyser jeux de données"
authors = [
    {name = "Antoine Noël",email = "noelantoine974@outlook.fr"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "notebook (>=7.5.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
